<resources>
    <string name="app_name" translatable="false">Yorozuya List</string>
    <string name="app_logo">App logo</string>
    <string name="login">Login with MAL</string>
    <string name="home">Home</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="this_season">This Season</string>
    <string name="anime_picture">Anime picture</string>
    <string name="anime_ranking">Anime Ranking</string>
    <string name="manga_ranking">Manga Ranking</string>
    <string name="suggested_anime">Suggested Anime</string>
    <string name="today">Today</string>
    <string name="watching">Watching</string>
    <string name="completed">Completed</string>
    <string name="on_hold">On Hold</string>
    <string name="dropped">Dropped</string>
    <string name="plan_to_watch">Plan to Watch</string>
    <string name="reading">Reading</string>
    <string name="plan_to_read">Plan to Read</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="show_in_mal">Show in MAL</string>
    <string name="tv">TV</string>
    <string name="movie">Movie</string>
    <string name="ova">OVA</string>
    <string name="ona">ONA</string>
    <string name="light_novel">Light Novel</string>
    <string name="novel">Novel</string>
    <string name="web_novel">Web Novel</string>
    <string name="original">Original</string>
    <string name="episodes">%1$s (%2$d Episodes)</string>
    <string name="chapters">%1$s (%2$d Chapters)</string>
    <string name="minutes">%1$d minutes</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="manhwa">Manhwa</string>
    <string name="music">Music</string>
    <string name="manhua">Manhua</string>
    <string name="one_shot">One Shot</string>
    <string name="special">Special</string>
    <string name="add_anime_list">Add to Anime List</string>
    <string name="add_manga_list">Add to Manga List</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="apply">Apply</string>
    <string name="delete">Delete</string>
    <string name="status">Status</string>
    <string name="score">Score</string>
    <string name="airing">Airing</string>
    <string name="finished">Finished</string>
    <string name="publishing">Publishing</string>
    <string name="not_yet_aired">Not Yet Aired</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="search_anime">Search Anime</string>
    <string name="search_manga">Search Manga</string>
    <string name="no_results">No results</string>
    <string name="days_num">Days\n%1$s</string>
    <string name="episodes_num">Episodes\n%1$s</string>
    <string name="mean_num">Mean\n%1$s</string>
    <string name="watching_num">Watching (%1$s)</string>
    <string name="completed_num">Completed (%1$s)</string>
    <string name="on_hold_num">On Hold (%1$s)</string>
    <string name="dropped_num">Dropped (%1$s)</string>
    <string name="plan_to_watch_num">Plan to Watch (%1$s)</string>
    <string name="search">Search</string>
</resources>