<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_home_36"
        android:title="@string/home"
        android:menuCategory="secondary" />
    <item
        android:id="@+id/animeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_movie_filter_36"
        android:title="@string/anime"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/mangaFragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_menu_book_36"
        android:title="@string/manga"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_account_circle_36"
        android:title="@string/profile"
        android:menuCategory="secondary"/>
</menu>