<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".view.home.HomeFragment">

            <Button
                android:id="@+id/buttonAnimeRanking"
                style="@style/semiRoundedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:padding="16dp"
                android:text="@string/anime_ranking"
                app:icon="@drawable/ic_round_view_list_24"
                app:layout_constraintEnd_toStartOf="@id/buttonMangaRanking"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonMangaRanking"
                style="@style/semiRoundedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="16dp"
                android:text="@string/manga_ranking"
                app:icon="@drawable/ic_round_view_list_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonAnimeRanking"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewToday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:text="@string/today"
                android:textSize="24sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_round_arrow_forward_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonAnimeRanking" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewTodayAnime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewSeasonal"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewToday"
                tools:listitem="@layout/item_today_anime_recycler" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBarToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/recyclerViewTodayAnime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/recyclerViewTodayAnime" />

            <TextView
                android:id="@+id/textViewSeasonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:text="@string/this_season"
                android:textSize="24sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_round_arrow_forward_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewTodayAnime" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSeasonalAnime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="186dp"
                android:layout_below="@id/textViewSeasonal"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSeasonal"
                tools:listitem="@layout/item_home_anime_recycler" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBarSeasonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/recyclerViewSeasonalAnime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/recyclerViewSeasonalAnime" />

            <TextView
                android:id="@+id/textViewSuggested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:text="@string/suggested_anime"
                android:textSize="24sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_round_arrow_forward_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewSeasonalAnime" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSuggestedAnime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="186dp"
                android:layout_below="@id/textViewSuggested"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewSuggested"
                tools:listitem="@layout/item_home_anime_recycler" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBarSuggested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/recyclerViewSuggestedAnime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/recyclerViewSuggestedAnime" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>